@startuml
set namespaceSeparator ::

class "lazyplants::components::api_connector.dart::ApiConnector" {
  +String baseUrl
  +String token
  +dynamic getData()
  +dynamic patchPlant()
  +dynamic postLogin()
}

class "lazyplants::components::db_models.dart::Plant" {
  +String memberId
  +String plantId
  +String plantName
  +Image plantPic
  +DateTime plantDate
  +String room
  +double soilMoisture
  +double humidity
  +String espId
}

"lazyplants::components::db_models.dart::Plant" o-- "dart::ui::Image"

class "lazyplants::components::db_models.dart::PlantData" {
  +String espId
  +String memberId
  +String plantId
  +double soilMoisture
  +double humidity
  +double temperature
  +double watertank
  +DateTime measuringTime
  +bool water
}

class "lazyplants::components::db_models.dart::PlantAdapter" {
  +int typeId
  +int hashCode
  +Plant read()
  +void write()
  +bool ==()
}

"hive::hive.dart::TypeAdapter<T>" <|-- "lazyplants::components::db_models.dart::PlantAdapter"

class "lazyplants::components::db_models.dart::PlantDataAdapter" {
  +int typeId
  +int hashCode
  +PlantData read()
  +void write()
  +bool ==()
}

"hive::hive.dart::TypeAdapter<T>" <|-- "lazyplants::components::db_models.dart::PlantDataAdapter"

class "lazyplants::components::navigation_drawer.dart::NavigationDrawer" {
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "lazyplants::components::navigation_drawer.dart::NavigationDrawer"

class "lazyplants::components::sliver_appbar.dart::MySliverAppBar" {
  +double collapsedHeight
  +double expandedHeight
  +double paddingTop
  +dynamic coverImgUrl
  +dynamic title
  +double minExtent
  +double maxExtent
  +dynamic shouldRebuild()
  +Color makeStickyHeaderBgColor()
  +Color makeStickyHeaderTextColor()
  +Widget build()
}

"flutter::src::widgets::sliver_persistent_header.dart::SliverPersistentHeaderDelegate" <|-- "lazyplants::components::sliver_appbar.dart::MySliverAppBar"

class "lazyplants::main.dart::MyApp" {
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "lazyplants::main.dart::MyApp"

class "lazyplants::screens::add_plant::add_plant_screen1.dart::AddPlantScreen1" {
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "lazyplants::screens::add_plant::add_plant_screen1.dart::AddPlantScreen1"

class "lazyplants::screens::add_plant::add_plant_screen2.dart::AddPlantScreen2" {
  +_AddPlantScreen2State createState()
}

"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "lazyplants::screens::add_plant::add_plant_screen2.dart::AddPlantScreen2"

class "lazyplants::screens::add_plant::add_plant_screen2.dart::_AddPlantScreen2State" {
  +dynamic dropdownValue
  +Widget build()
}

"flutter::src::widgets::framework.dart::State<T>" <|-- "lazyplants::screens::add_plant::add_plant_screen2.dart::_AddPlantScreen2State"

class "lazyplants::screens::add_plant::add_plant_screen3.dart::AddPlantScreen3" {
  +_AddPlantScreen3State createState()
}

"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "lazyplants::screens::add_plant::add_plant_screen3.dart::AddPlantScreen3"

class "lazyplants::screens::add_plant::add_plant_screen3.dart::_AddPlantScreen3State" {
  -double _currentHumiditySliderValue
  -Future _showMyDialog()
  +Widget build()
}

"flutter::src::widgets::framework.dart::State<T>" <|-- "lazyplants::screens::add_plant::add_plant_screen3.dart::_AddPlantScreen3State"

class "lazyplants::screens::add_plant::add_plant_screen4.dart::AddPlantScreen4" {
  +_AddPlantScreen4State createState()
}

"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "lazyplants::screens::add_plant::add_plant_screen4.dart::AddPlantScreen4"

class "lazyplants::screens::add_plant::add_plant_screen4.dart::_AddPlantScreen4State" {
  -Image _image
  +ImagePicker picker
  +Future getImage()
  +Widget build()
}

"lazyplants::screens::add_plant::add_plant_screen4.dart::_AddPlantScreen4State" o-- "flutter::src::widgets::image.dart::Image"
"lazyplants::screens::add_plant::add_plant_screen4.dart::_AddPlantScreen4State" o-- "image_picker::image_picker.dart::ImagePicker"
"flutter::src::widgets::framework.dart::State<T>" <|-- "lazyplants::screens::add_plant::add_plant_screen4.dart::_AddPlantScreen4State"

class "lazyplants::screens::home_screen.dart::HomeScreen" {
  +_HomeScreenState createState()
}

"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "lazyplants::screens::home_screen.dart::HomeScreen"

class "lazyplants::screens::home_screen.dart::_HomeScreenState" {
  +Widget build()
}

"flutter::src::widgets::framework.dart::State<T>" <|-- "lazyplants::screens::home_screen.dart::_HomeScreenState"

class "lazyplants::screens::home_screen.dart::CircleIndicator" {
  +void paint()
  +bool shouldRepaint()
}


class "lazyplants::screens::home_screen.dart::WaterIndicator" {
  +double percentage
  +void paint()
  +bool shouldRepaint()
}

"flutter::src::rendering::custom_paint.dart::CustomPainter" <|-- "lazyplants::screens::home_screen.dart::WaterIndicator"

class "lazyplants::translation.dart::Translation" {
  +dynamic keys
}

"get::get_navigation::src::root::internacionalization.dart::Translations" <|-- "lazyplants::translation.dart::Translation"


@enduml